--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -3,6 +3,13 @@ html(lang="en")
 	head
 		meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
 		meta(name="viewport", content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, width=device-width")
+		
+		meta(property="og:site_name", content="")
+    		meta(property="og:title", content="")
+    		meta(property="og:description", content="")
+    		meta(property="og:type", content="")
+    		meta(property="og:url", content="")
+    		meta(property="og:image", content="")
 				
 		title SimpleTemplate
 		// build:css({.tmp,app}) css/main.css
