Improve the build task
add rev
improve cssmin task

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -12,7 +12,7 @@ html(lang="en")
 		meta(property="og:image", content="")
 				
 		title SimpleTemplate
-		// build:css({.tmp,app}) css/main.css
+		// build:css css/main.css
 		link(rel='stylesheet', href='css/main.css')
 		// endbuild
 	body
@@ -24,6 +24,5 @@ html(lang="en")
 		// endbuild
 
 		// build:js js/main.js
-		script(type='text/javascript', src='js/Main.js')
-		script(type='text/javascript', src='js/Hola.js')
+		script(type='text/javascript', src='js/main.js')
 		// endbuild
