--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -6,22 +6,24 @@ html(lang="en")
 		meta(name="apple-mobile-web-app-capable" content="yes")
 		meta(name="apple-mobile-web-app-status-bar-style" content="black")
 
-		meta(property="og:site_name", content="")
-		meta(property="og:title", content="")
-		meta(property="og:description", content="")
+		//- facebook meta
+		meta(property="og:site_name", content="SimpleTemplate")
+		meta(property="og:title", content="SimpleTemplate")
+		meta(property="og:description", content="your website")
 		meta(property="og:type", content="")
 		meta(property="og:url", content="")
 		meta(property="og:image", content="")
-				
+
 		title SimpleTemplate
 		// build:css css/main.css
 		link(rel='stylesheet', href='css/main.css')
 		// endbuild
 	body
-		h1 Imagination is more important than knowledge.
+		h1 Imagination is more important than knowledge. Let start an awesome project!
 
 		// build:js js/vendor.js
 		// bower:js
+		
 		// endbower
 		// endbuild
 
