--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -10,7 +10,7 @@ html(lang="en")
 		meta(property="og:site_name", content="SimpleTemplate")
 		meta(property="og:title", content="SimpleTemplate")
 		meta(property="og:description", content="your website")
-		meta(property="og:type", content="")
+		meta(property="og:type", content="website")
 		meta(property="og:url", content="")
 		meta(property="og:image", content="")
 
