fix watch + improve coffee

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -28,5 +28,9 @@ html(lang="en")
 		// endbuild
 
 		// build:js js/main.js
+		script(type='text/javascript', src='js/core/2d/Stage2d.js')
+		script(type='text/javascript', src='js/core/3d/Stage3d.js')
+		script(type='text/javascript', src='js/core/scenes/Scene.js')
+		script(type='text/javascript', src='js/core/scenes/SceneTraveler.js')
 		script(type='text/javascript', src='js/main.js')
 		// endbuild
