--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -1,3 +1,9 @@
+-var TITLE = "Template"
+-var DESCRIPTION = "Description"
+-var TYPE = "website"
+-var URL = ""
+-var FB_IMG = ""
+
 doctype html
 html(lang="en")
 	head
@@ -7,29 +13,29 @@ html(lang="en")
 		meta(name="apple-mobile-web-app-status-bar-style" content="black")
 
 		//- facebook meta
-		meta(property="og:site_name", content="SimpleTemplate")
-		meta(property="og:title", content="SimpleTemplate")
-		meta(property="og:description", content="your website")
-		meta(property="og:type", content="website")
-		meta(property="og:url", content="")
-		meta(property="og:image", content="")
+		meta(property="og:site_name", content=TITLE)
+		meta(property="og:title", content=TITLE)
+		meta(property="og:description", content=DESCRIPTION)
+		meta(property="og:type", content=TYPE)
+		meta(property="og:url", content=URL)
+		meta(property="og:image", content=FB_IMG)
 
-		title SimpleTemplate
+		title !{TITLE}
 		// build:css css/main.css
 		link(rel='stylesheet', href='css/main.css')
 		// endbuild
-	body
-		h1 Imagination is more important than knowledge. Let start an awesome project!
 
-		// build:js js/vendor.js
-		// bower:js
-		
-		// endbower
+	body
+		// build:js js/vendors.js
+		script(type='text/javascript', src='vendors/threejs/three.js')
+		script(type='text/javascript', src='vendors/greensock/uncompressed/TweenMax.js')
+		script(type='text/javascript', src='vendors/pixi/pixi.dev.js')
+		script(type='text/javascript', src='vendors/dat.gui.js')
 		// endbuild
 
 		// build:js js/main.js
-		script(type='text/javascript', src='js/core/2d/Stage2d.js')
-		script(type='text/javascript', src='js/core/3d/Stage3d.js')
+		script(type='text/javascript', src='js/core/Stage2d.js')
+		script(type='text/javascript', src='js/core/Stage3d.js')
 		script(type='text/javascript', src='js/core/scenes/Scene.js')
 		script(type='text/javascript', src='js/core/scenes/SceneTraveler.js')
 		script(type='text/javascript', src='js/main.js')
